# cookiecutter-pypackage

./: README.md  cookiecutter.json
.github/workflows/: dev.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .dockerignore  .gitignore  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  README.md  _build_extension.py  gather_vars.py  hadolint.yaml  noxfile.py  pyproject.toml  setup.cfg  trivy.yaml
{{cookiecutter.project_slug}}/.github/workflows/: complete.yml  complete_c_extension.yml  container.yml  dev.yml  dev_pure_python.yml  docs.yml  preview.yml  release.yml
{{cookiecutter.project_slug}}/sphinx_docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/trivy_cache/: .gitkeep
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  bundle.py  models.py  pipeline.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/cli_tools/: cli.py
