{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'GPL-3.0-or-later': 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'LGPL-3.0-only': 'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'LGPL-3.0-or-later': 'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)'
} -%}

[tool.poetry]
    name = "{{ cookiecutter.project_slug }}"
    version = "{{ cookiecutter.version }}"
    homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
    repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
    documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}/"
    description = "{{ cookiecutter.project_short_description }}."
    authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
    readme = "README.md"
    {%- if cookiecutter.open_source_license in license_classifiers %}
    license =  "{{ cookiecutter.open_source_license }}"
    {%- endif %}
    # full classifier list can be found at https://pypi.org/classifiers/
    classifiers=[
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
    {%- if cookiecutter.open_source_license in license_classifiers %}
        '{{ license_classifiers[cookiecutter.open_source_license] }}',
    {%- endif %}
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
    ]
    packages = [
        { include = "{{ cookiecutter.pkg_name }}" },
        { include = "{{ cookiecutter.pkg_name }}/py.typed" },
        { include = "tests", format = "sdist" },
        # { include = "libs", format = "sdist" },  in case of C extension
    ]

    # in case of C extension
    #[tool.poetry.build]
    #    script = "build_extension.py"
    #    generate-setup-file = true

    [tool.poetry.urls]
        "Issue Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
        "Documentation" = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}/"
        "Changelog" = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}/history.html"
        "Source" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

    [tool.poetry.dependencies]
        python = ">=3.9.0,<3.13"

        {%- if cookiecutter.command_line_interface|lower == 'click' %}
        click = "^8.1.7"
        click-extra = "^4.8.3"
        cloup = "^3.0.3"
        {%- endif %}
        tqdm = "^4.66.0"
        termcolor = "^2.4.0"
        
        # pydantic = "^2.7.4"
        # pydantic_settings = "^2.3.3"
        # pwinput = "^1.0.3"  # needs pycharm's "Emulate terminal in console window" option to run correctly
        # pytz = "2024.1"

    [tool.poetry.group.devel]
        optional = true
        [tool.poetry.group.devel.dependencies]
            pip  = "^24.1"
            black  = "^24.4.2"
            isort  = "^5.13.0"
            flake8  = "^7.1.0"
            flake8-docstrings = "^1.6.0"
            {%- if cookiecutter.use_mypy == 'y' %}
            mypy = "^0.961"
            {%- endif %}
            pytest  = "^8.2.2"
            pytest-cov  = "^5.0.0"
            tox  = "^4.4.6"
            virtualenv  = "^20.26.3"
            twine  = "^5.1.0"
            {%- if 'mkdocs' in cookiecutter.doc_generator|lower %}
            mkdocs  = "^1.1.2"
            mkdocs-include-markdown-plugin  = "^1.0.0"
            mkdocs-material  = "^6.1.7"
            mkdocstrings  = "^0.15.2"
            mkdocs-material-extensions  = "^1.0.1"
            mkdocs-autorefs = "^0.2.1"
            {%- else %}
            Sphinx = "^7.3.7"
            sphinx-rtd-theme = "^2.0.0"
            sphinxcontrib-napoleon = "0.7"
            m2r2 = "0.3.2"
            {%- endif %}
            pre-commit = "^2.12.0"
            pytomlpp = "^1.0.11"
            commitizen = "^3.27.0"
            darglint = "^1.8.1"
            bandit = "^1.7.9"
            yamllint = "^1.35.1"
            codespell = "^2.3.0"
            pylint = "^3.2.3"
            types-termcolor = "^1.1.5"
            types-setuptools = "^70.0.0"
            reuse = "^3.0.2"
            setuptools = "^70.1.0"
            wheel = "^0.43.0"
            cibuildwheel = "^2.19.0"
            check-python-versions = "^0.22.0"
            python-active-versions = "^1.9.1"
            icecream = "^2.1.3"
            pyinstaller = "^6.8.0"
            nox = "^2024.4.15"
            ruff = "^0.4.10"
            rtoml = "^0.11.0"  # needs rust compiler installed, alternative t pytomlpp


{% if cookiecutter.command_line_interface|lower == 'click' -%}
    [tool.poetry.scripts]
        {{ cookiecutter.project_slug }} = '{{ cookiecutter.pkg_name }}.cli_tools.cli:main'

{% endif -%}

[tool.black]
    line-length = 120
    skip-string-normalization = true
    target-version = ['py39', 'py310']
    include = '\.pyi?$'
    exclude = '''
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
    '''

[tool.isort]
    multi_line_output = 3
    include_trailing_comma = true
    force_grid_wrap = 0
    use_parentheses = true
    ensure_newline_before_comments = true
    line_length = 120
    skip_gitignore = true
    # you can skip files as below
    #skip_glob = ["docs/conf.py", "path/*"]

[tool.commitizen]
    name = "cz_conventional_commits"
    version = "{{ cookiecutter.version }}"
    version_files = [
        "{{ cookiecutter.pkg_name }}/__init__.py:__version__",
        "pyproject.toml:version"
    ]
    gpg_sign = true
    bump_message = 'Bump version: $current_version -> $new_version'
    update_changelog_on_bump = false
    style = [
        ["qmark", "fg:#ff9d00 bold"],
        ["question", "bold"],
        ["answer", "fg:#ff9d00 bold"],
        ["pointer", "fg:#ff9d00 bold"],
        ["highlighted", "fg:#ff9d00 bold"],
        ["selected", "fg:#cc5454"],
        ["separator", "fg:#cc5454"],
        ["instruction", ""],
        ["text", ""],
        ["disabled", "fg:#858585 italic"]
    ]


[tool.bandit]
    tests = [
        # list from https://github.com/outscale/osc-sdk-python/blob/master/bandit.conf
        "B101",  # assert_used
        "B103",  # set_bad_file_permissions
        "B105",  # hardcoded_password_string
        "B106",  # hardcoded_password_funcarg
        "B107",  # hardcoded_password_default
        "B108",  # hardcoded_tmp_directory
        "B110",  # try_except_pass
        "B112",  # try_except_continue
        "B108",  # hardcoded_tmp_directory
        "B301",  # pickle library
        "B303",  # MD5 insecure hash function
        "B304",  # insecure ciphers
        "B305",  # insecure cipher modes
        "B306",  # deprecated mktemp
        "B307",  # eval - Use of possibly insecure function - consider using safer ast.literal_eval
        "B313",  # xml_bad_cElementTree
        "B314",  # xml_bad_ElementTree
        "B315",  # xml_bad_expatreader
        "B316",  # xml_bad_expatbuilder
        "B317",  # xml_bad_sax
        "B318",  # xml_bad_minidom
        "B319",  # xml_bad_pulldom
        "B320",  # xml_bad_etree
        "B323",  # unverified_context
        "B324",  # hashlib_new_insecure_functions
        "B325",  # tempnam
        "B501",  # request_with_no_cert_validation
        "B502",  # ssl_with_bad_version
        "B503",  # ssl_with_bad_defaults
        "B504",  # ssl_with_no_version
        "B505",  # weak_cryptographic_key
        "B506",  # yaml_load
        "B507",  # ssh_no_host_key_verification
        "B601",  # paramiko_calls
        "B602",  # subprocess_popen_with_shell_equals_true
        "B604",  # any_other_function_with_shell_equals_true
        "B605",  # start_process_with_a_shell
        "B606",  # start_process_with_no_shell
        "B607",  # start_process_with_partial_path
        "B608",  # hardcoded_sql_expressions
        "B609"   # linux_commands_wildcard_injection
    ]


[tool.pylint]
#ignore-paths = [
#    "folder/*"
#]
max-line-length=120

[build-system]
    requires = ["setuptools", "poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"


# locally can be run with 'poetry run cibuildwheel --platform ...'
[tool.cibuildwheel]
    build-frontend = "pip"
    build-verbosity = 3

    before-test = "python -m pip install --upgrade pip"
    test-requires = ["poetry", "tox", "pytest"]
    test-command = [
        # takes tox & pytest configs from setup.cfg
        # change to project dir where pyproject.toml exists
        "cd {project}",
        'poetry run tox --skip-pkg-install -e py3.11'
    ]

    # Skip CPython 3.6 and CPython 3.7 , Disable building PyPy wheels on all platforms
    skip = ["cp36-*", "cp37-*", "pp*", "*musllinux*", "*aarch*", "*ppc*", "*s390*", "cp38-*", "cp39-*", "cp310-*"]
    build = ["cp311-*"]

    # configure cibuildwheel to build native archs ('auto'), and some emulated ones
    # https://cibuildwheel.readthedocs.io/en/stable/faq/#emulation
    # https://cibuildwheel.readthedocs.io/en/stable/options/#build-skip
    # https://github.com/pypa/cibuildwheel/blob/main/examples/github-with-qemu.yml
    [tool.cibuildwheel.windows]
        archs = ["AMD64"]
    [tool.cibuildwheel.macos]
        archs = ["x86_64"]
    [tool.cibuildwheel.linux]
        # i686 arch needs cryptography to be manually built
        # https://github.com/pyca/cryptography/blob/main/docs/installation.rst
        archs = ["x86_64"]
        # Build using the manylinux2014 image -> AlmaLinux 8 based
        manylinux-x86_64-image = "manylinux_2_28"
        manylinux-i686-image = "manylinux_2_28"
        manylinux-aarch64-image = "manylinux_2_28"
        repair-wheel-command = ""
        # https://stackoverflow.com/questions/47968578/python3-utf-8-decode-issue
        environment = { CRYPTOGRAPHY_DONT_BUILD_RUST="1", PYTHONIOENCODING="utf8" }
        # skip musslinux build https://cibuildwheel.readthedocs.io/en/stable/options/#overrides
        [[tool.cibuildwheel.overrides]]
            select = "*-musllinux*"
            skip = ["cp*", "pp*"]
